--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 # English strings go here for Rails i18n
 en:
-  permission_edit_assigned_to:     "Assigned to"
+  permission_edit_assigned_to:     "Edit assigned to"
   permission_edit_due_date:        "Edit due date"
   permission_edit_estimated_hours: "Edit estimated time"
   permission_edit_priority:        "Edit priority"
